--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top">
         <div class="budget">
             <div class="budget__title">
-                Available Budget in <span class="budget__title--month">%Month%</span>:
+                Хувийн санхүү <span class="budget__title--month"></span>:
             </div>
 
             <div class="budget__value">+ 2,345.64</div>
@@ -43,12 +43,13 @@
             <option value="inc" selected>+</option>
             <option value="exp">-</option>
           </select>
-                <input type="text" class="add__description" placeholder="Add description" />
-                <input type="number" class="add__value" placeholder="Value" />
+                <input type="text" class="add__description" placeholder="Тайлбар" />
+                <input type="number" class="add__value" placeholder="Дүн" />
                 <button class="add__btn">
             <i class="ion-ios-checkmark-outline"></i>
           </button>
             </div>
+            uoo
         </div>
 
         <div class="container clearfix">
