--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="budget__value">+ 2,345.64</div>
 
             <div class="budget__income clearfix">
-                <div class="budget__income--text">Income</div>
+                <div class="budget__income--text">ОРЛОГО</div>
                 <div class="right">
                     <div class="budget__income--value">+ 4,300.00</div>
                     <div class="budget__income--percentage">&nbsp;</div>
@@ -27,7 +27,7 @@
             </div>
 
             <div class="budget__expenses clearfix">
-                <div class="budget__expenses--text">Expenses</div>
+                <div class="budget__expenses--text">ЗАРЛАГА</div>
                 <div class="right clearfix">
                     <div class="budget__expenses--value">- 1,954.36</div>
                     <div class="budget__expenses--percentage">45%</div>
@@ -54,7 +54,7 @@
 
         <div class="container clearfix">
             <div class="income">
-                <h2 class="icome__title">Income</h2>
+                <h2 class="icome__title">ОРЛОГО</h2>
 
                 <div class="income__list">
                     <!--
@@ -82,7 +82,7 @@
             </div>
 
             <div class="expenses">
-                <h2 class="expenses__title">Expenses</h2>
+                <h2 class="expenses__title">ЗАРЛАГА</h2>
 
                 <div class="expenses__list">
                     <!--
